# termatplotlib

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  examples.py  pyproject.toml  report.txt  run.cmd  run.ps1  run.sh
.github/workflows/: publish.yml  test.yml
docs/: advanced.md  api-reference.md  changelog.md  chart-types.md  configuration.md  contributing.md  examples.md  index.md  installation.md  output.md  quickstart.md
termatplotlib/: __init__.py  bar.py  boxplot.py  bubble.py  bullet.py  calendar_heatmap.py  candlestick.py  cli.py  diverging_bar.py  donut.py  figure.py  funnel.py  gantt.py  heatmap.py  hist.py  line.py  pareto.py  pie.py  radar.py  sankey.py  scatter.py  sparkline.py  step.py  strip.py  utils.py  vertical_bar.py  violin.py  waterfall.py  wordcloud.py
tests/: test_termatplotlib.py
